Fix javadoc errors: removed custom tags, fixed malformed HTML
- Removed @url, @httpverb, @nullipotent, @secured, @httpcodeonsuccess, @httpcodeonerror
  tags from PSGenericKeyRestService.java and IPSFormRestService.java
- Fixed malformed HTML (unescaped <) in PSMembershipService.java
- Applied spotless formatting